# mcp-ssh-multi

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  ssh_servers.yaml
.github/workflows/: publish.yml
src/mcp_ssh_multi/: __init__.py  __main__.py  config.py  errors.py  server.py
src/mcp_ssh_multi/client/: ssh_client.py
src/mcp_ssh_multi/tools/: __init__.py  helpers.py  registry.py  tools_connection.py  tools_execute.py  tools_files.py  tools_system.py
src/ssh_mcp/: __init__.py  __main__.py  config.py  errors.py
src/ssh_mcp/client/: __init__.py  ssh_client.py
src/ssh_mcp/tools/: registry.py  tools_connection.py  tools_files.py
tests/: test_basic.py  test_pagination.py  test_retry.py  test_tools_system.py
